--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ dependencies:
     sdk: flutter
 
   # Firebase
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
-  firebase_database: ^10.4.0
-  firebase_storage: ^11.6.0
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  firebase_database: ^11.1.4
+  firebase_storage: ^12.3.4
 
   # Google 로그인
   google_sign_in: ^6.2.1
@@ -27,6 +27,11 @@ dependencies:
 
   # 유틸리티
   intl: ^0.18.1
+  # 공유 기능
+  share_plus: ^7.2.1
+
+  # URL 런처
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +40,22 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  # 폰트
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/Pretendard-Regular.otf
+          weight: 400
+        - asset: assets/fonts/Pretendard-Medium.otf
+          weight: 500
+        - asset: assets/fonts/Pretendard-SemiBold.otf
+          weight: 600
+        - asset: assets/fonts/Pretendard-Bold.otf
+          weight: 700
+
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
