커플 모드 세부 하위 내용 커플 모드 기능 개선 및 버그 수정
주요 변경사항:
- feat: 커플 연결 시 양방향 팝업 구현
- fix: 연결 성공 팝업 중복 표시 문제 해결 (메모리 플래그 사용)
- feat: 커플 일기 수정 기능 구현
- fix: 커플 일기 수정 시 공통 이미지 로드 안되던 문제 해결
- fix: SharedPreferences 의존성 제거 및 메모리 변수로 대체

상세:
- couple_diary_detail_screen.dart: _editMyEntry() 메소드 구현
- diary_write_screen.dart: existingEntry 파라미터 추가, 공통 이미지 로드 로직 추가
- settings_screen.dart: SharedPreferences 제거, _hasShownPopup 플래그로 팝업 관리
- 커플 일기 작성/수정 시 공통 이미지 정상 표시
- 앱 재시작 후에도 팝업 중복 없이 정상 동작

테스트 완료:
- 커플 연결 팝업 양방향 표시
- 일기 수정 기능 정상 작동
- 공통 이미지 업로드/표시 정상 (확인중)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   # URL 런처
   url_launcher: ^6.2.2
 
+  shared_preferences: ^2.2.2 #추가함여
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
