커플 모드 세부 하위 내용 커플 모드 기능 개선 및 버그 수정
주요 변경사항:
-커플 일기 공통 이미지 업로드 안 됨 문제 해결

원인
-이미지 표시 안됨
-이미지 업로드 결과 체크 누락
-Firebase Storage 권한 문제 가능성
-이미지 선택 권한 문제 가능성
셋다 해결 완료
-diary_write_screen.dart 수정
- Firebase Storage 규칙 설정 변경
-android/app/src/main/AndroidManifest.xml 앱설정 권한 변경

-커플 연결 팝업 중복 문제 해결
-Firebase 영구 플래그 저장 방식으로 변경
- 리스너 팝업 제거 (onSuccess에서만)
- 설정 재진입 시 팝업 안 뜸
-앱 재시작 후에도 팝업 안 뜸

-개인 일기 상세 화면 추가
- calendar_screen 클릭 로직 수정
- 일기 수정 기능
-일기 삭제 기능
-커플 일기와 유사한 UI 디자인

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 권한 선언 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <!-- 카메라 하드웨어 기능 (선택사항으로 설정) -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false"/>
+
+
     <application
         android:label="at_a_look_diary"
         android:name="${applicationName}"
