Remove sensitive files and update .gitignore for public repo

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,9 @@
 *.swp
 .DS_Store
 .atom/
-.build/
 .buildlog/
 .history
 .svn/
-.swiftpm/
 migrate_working_dir/
 
 # IntelliJ related
@@ -18,20 +16,19 @@ migrate_working_dir/
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# VS Code related
+.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
-/coverage/
 
 # Symbolication related
 app.*.symbols
@@ -43,3 +40,43 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# 🔥 Firebase 민감 파일 (절대 올라가면 안됨!)
+**/android/app/google-services.json
+**/ios/Runner/GoogleService-Info.plist
+**/lib/firebase_options.dart
+**/.firebase/
+**/firebase.json
+**/.firebaserc
+
+# 환경 변수 및 설정 파일
+.env
+.env.*
+*.env
+**/.env
+secrets.yaml
+config.yaml
+
+# API Keys 및 민감 정보
+**/api_keys.dart
+**/secrets.dart
+**/credentials.json
+**/service-account.json
+
+# 빌드 파일
+**/android/app/build/
+**/android/.gradle/
+**/android/gradle/
+**/android/local.properties
+**/ios/build/
+**/ios/Pods/
+**/ios/.symlinks/
+**/ios/Flutter/App.framework
+**/ios/Flutter/Flutter.framework
+**/ios/Flutter/Flutter.podspec
+**/ios/ServiceDefinitions.json
+**/ios/Runner/GeneratedPluginRegistrant.*
+
+# 기타
+*.lock
+pubspec.lock
